# jless

./: CMakeLists.txt
src/: board.cpp  board.h  jless.cpp  piece.cpp  piece.h  piece_instances.cpp  piece_instances.h  piece_interface.h  piece_owner_enum.h  pieces.cpp  pieces.h  tile.cpp  tile.h
src/pieces/: piece_bishop.h  piece_interface.h  piece_king.h  piece_knight.h  piece_pawn.h  piece_queen.h  piece_rook.h
